# media_rtmp

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/rtmp_media/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  rtmp_media.cpp
app/src/main/cpp/pusher/: RtmpCallback.cpp  RtmpController.cpp  VideoChannel.cpp
app/src/main/cpp/pusher/include/: RtmpCallback.h  RtmpController.h  VideoChannel.h
app/src/main/cpp/util/: log.h  safe_queue.h
app/src/main/java/com/example/rtmp_media/: MainActivity.java  RtmpNative.java  VideoInfo.java  YUVUtil.java
app/src/main/java/com/example/rtmp_media/capture/: AudioCapture.java  CameraCapture.java
app/src/main/java/com/example/rtmp_media/codec/: AACEncode.java  H264Codec.java  H264DeCodec.java  MediaCodecHelper.java
app/src/main/java/com/example/rtmp_media/enums/: VideoFrameType.java
app/src/main/java/com/example/rtmp_media/flv/: FlvHelper.java
app/src/main/java/com/example/rtmp_media/ui/: MainActivity.java  PusherActivity.java
app/src/main/java/com/example/rtmp_media/util/: YUVUtil.java
app/src/main/res/layout/: activity_main.xml  activity_pusher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/rtmp_media/: ExampleUnitTest.java
rtmpLib/src/androidTest/java/com/example/rtmplib/: ExampleInstrumentedTest.java
rtmpLib/src/main/: AndroidManifest.xml
rtmpLib/src/main/java/com/example/rtmplib/: IBinary.java  RtmpSocket.java
rtmpLib/src/main/java/com/example/rtmplib/AMF/: AMF.java  AMFBoolean.java  AMFECMAArray.java  AMFNull.java  AMFNumber.java  AMFObject.java  AMFObjectEnd.java  AMFString.java  AMFUndefind.java  ICreator.java
rtmpLib/src/main/java/com/example/rtmplib/handskake/: CS0.java  CS1.java  CS2.java  Handshake.java
rtmpLib/src/main/java/com/example/rtmplib/header/: BasicHeader.java  ChunkHeader.java  RtmpChunk.java
rtmpLib/src/main/java/com/example/rtmplib/headshake/: CS0.java  CS1.java  CS2.java
rtmpLib/src/main/java/com/example/rtmplib/parse/: BasicHeaderHandler.java  BodyHandler.java  (+4 more)
rtmpLib/src/test/java/com/example/rtmplib/: ExampleUnitTest.java
(+18 files in other folders)
